Preparación de juego mira y stdafx

--- a/Crosshair/Crosshair.vcxproj
+++ b/Crosshair/Crosshair.vcxproj
@@ -130,7 +130,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Crosshair.cpp" />
+    <ClCompile Include="Juego.h" />
+    <ClCompile Include="Mira.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
