--- a/Crosshair/Crosshair.vcxproj.filters
+++ b/Crosshair/Crosshair.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Crosshair.cpp">
+    <ClCompile Include="Juego.h">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Mira.h">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
